Copyright (C) 2017 Alpha Griffin
@%@~LICENSE~@%@

saw_072617_3 - Add simple startup script and "run" Makefile target.

saw_072617_2 - Simple README.

saw_072617_1 - First commit for boiler.
