@@ -5,6 +5,8 @@
 
 # Adapted from the file auto-generated by sphinx-quickstart.
 
+ARGS=
+
 # You can set these variables from the command line.
 SPHINXOPTS    = -c etc/sphinx
 SPHINXBUILD   = sphinx-build
@@ -32,7 +34,8 @@ help:
 	@echo "  all            to make all common tasks: python, docs"
 	@echo "  clean          to clean all common tasks: python_clean, docs_clean"
 	@echo ""
-	@echo "  run            run the application in-place"
+	@echo "  run            run the application in-place; use ARGS= to set additional arguments"
+	@echo "                     e.g.: make ARGS='follow bitcoin life' run"
 	@echo "  install        to install what has been built to the system (first try make all)"
 	@echo ""
 	@echo "  python         to build Python code"
@@ -65,7 +68,7 @@ python_clean:
 
 
 run:
-	./boiler
+	./boiler $(ARGS)
 
 install:
 	./setup.py install
